<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/nav_home" />
    </group>
    <group android:id="@+id/grp22" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_track_orders"
            android:icon="@drawable/appointment"
            android:title="@string/nav_orders" />
    </group>
    <group android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/msgs"
            android:title="@string/nav_messages" />
    </group>
    <group android:id="@+id/grp3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_profile" />

    </group>
    <group android:id="@+id/grp4" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />

    </group>
    <group android:id="@+id/grp5" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/appointment"
            android:title="@string/history" />
    </group>
    <group android:id="@+id/grp6" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/signout"
            android:title="@string/nav_signout" />
    </group>

    <!--<item android:title="Other">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_about_us"-->
    <!--android:title="@string/nav_about_us" />-->
    <!--<item-->
    <!--android:id="@+id/nav_privacy_policy"-->
    <!--android:title="@string/privacy_policy" />-->
    <!--</menu>-->
    <!--</item>-->

</menu>
