<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/delete_image"
                android:textColor="@color/green"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_txt_body"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDialogUpload"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/do_you_want_to_delete_this_image"
                android:textColor="@color/gray_txt"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnDialogDeleteImg"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:background="@color/green"
                android:text="@string/delete"
                android:textColor="@color/white" />


            <Button
                android:id="@+id/btnDialogDeleteCancel"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@android:color/transparent"
                android:text="@string/cancel"
                android:textColor="@color/orange" />
        </LinearLayout>


    </LinearLayout>
</LinearLayout>