<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/thank_you"
                android:textColor="@color/green"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_txt_body"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textDialogContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/thank_you_joining_jaxi"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/good_luck"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDialogPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:padding="4dp">

            <Button
                android:id="@+id/buttonDialogConfirmDone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@color/green"
                android:text="@string/done"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>