<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:orientation="vertical"
        android:padding="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textDialogTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/order_fees"
                android:textColor="@color/green"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_txt_body"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="105dp"
            android:padding="4dp">

            <ProgressBar
                android:id="@+id/progressBarDialogPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp" />

            <TextView
                android:id="@+id/textDialogContent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/calculating_order_fees"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearDialogPrice"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:padding="4dp">

            <Button
                android:id="@+id/buttonDialogPriceConfirm"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:background="@color/green"
                android:text="@string/confirm_order" />

            <Button
                android:id="@+id/buttonDialogPriceCancel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:textColor="@color/orange"
                android:background="@android:color/transparent"
                android:text="@string/cancel" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>