<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_margin="4dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/rate_broker"
            android:textColor="@color/green"
            android:textSize="22sp" />

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:background="@color/gray_txt_body"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:padding="4dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgDialogRate"
                android:layout_width="75dp"
                android:layout_height="75dp" />

            <TextView
                android:id="@+id/textRateBrokerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="Broker Name"
                android:textColor="@color/gray_txt"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_this_broker_and_its_service_offered_to_you" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <com.mediaoasis.ossul.view.CustomRatingBar
                android:id="@+id/rateDialogRate"
                android:layout_width="120dp"
                android:layout_height="20dp"
                android:layout_gravity="start"
                android:numStars="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <EditText
                android:id="@+id/edittextDialogRate"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:hint="@string/write_your_feedback" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center">

            <Button
                android:id="@+id/buttonDialogRateDone"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/done"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/gray_txt_body"
                android:visibility="gone"></LinearLayout>

            <Button
                android:id="@+id/buttonDialogRateCancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="Cancel"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>