<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/gray_bg"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/email" />
                    </LinearLayout>

                    <!--<LinearLayout-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="0.25"-->
                    <!--android:gravity="center"></LinearLayout>-->

                    <EditText
                        android:id="@+id/editTextSignInEmail"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@android:color/transparent"
                        android:digits="abcdefghijklmnopqrstuvwxyz 0123456789-_.@"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/gray_bg"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/password" />
                    </LinearLayout>


                    <!--<LinearLayout-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:layout_weight="0.25"-->
                    <!--android:gravity="center"></LinearLayout>-->

                    <EditText
                        android:id="@+id/editTextSignInPassword"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center">


                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@drawable/edit_text_curve_green"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <Button
                    android:id="@+id/buttonForgetPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:text="@string/forget_your_password"
                    android:textColor="@color/blue"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>